Add configurable HTTP timeouts to Java LFS producer