@@ -21,7 +21,7 @@ limitations under the License.
 
   <groupId>org.kafscale</groupId>
   <artifactId>lfs-sdk</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.2.0-SNAPSHOT</version>
   <name>KafScale LFS SDK</name>
   <description>Client-side LFS helpers for Kafka.</description>
 
@@ -68,6 +68,7 @@ limitations under the License.
         <version>3.5.1</version>
         <configuration>
           <useModulePath>false</useModulePath>
+          <argLine>--add-modules jdk.httpserver</argLine>
         </configuration>
       </plugin>
     </plugins>
